# ChangeLog for sci-biology/afni
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  25 Mar 2015;  <chymera@gentoo.org> afni-0_pre20130927.ebuild:
  updated nonlive ebuild

  25 Mar 2015;  <chymera@gentoo.org> afni-9999.ebuild:
  referencing rdepend

  25 Mar 2015;  <chymera@gentoo.org> afni-9999.ebuild:
  unindented accolades

  24 Mar 2015;  <chymera@gentoo.org> afni-9999.ebuild:
  no longer making afni bin, compiling everything with -j1

  24 Mar 2015;  <chymera@gentoo.org> afni-9999.ebuild:
  fixed weird SUMA/SUMA_Makefile logic

  19 Mar 2015;  <chymera@gentoo.org> afni-9999.ebuild:
  depend on  x11-libs/libGLw

  19 Mar 2015;  <chymera@gentoo.org> afni-9999.ebuild:
  Ebuild remake by grknight, now honoring cflags and other gentoo settings

  18 Mar 2015;  <chymera@gentoo.org> afni-9999.ebuild:
  removed echo andblank line

  18 Mar 2015;  <chymera@gentoo.org> afni-9999.ebuild:
  no longer including Makefile.INCLUDE

  17 Mar 2015;  <chymera@gentoo.org> afni-9999.ebuild:
  doexe from prog_list.txt

  16 Mar 2015;  <chymera@gentoo.org> afni-9999.ebuild:
  Now istalling exes specified in src/prog_list.txt

  11 Mar 2015;  <chymera@gentoo.org> afni-9999.ebuild:
  reverted to insinto, dealing with run permissions separately

  11 Mar 2015;  <chymera@gentoo.org> afni-9999.ebuild:
  finished git-uri rewrite

  11 Mar 2015;  <chymera@gentoo.org> afni-9999.ebuild:
  installing directly from github

  10 Mar 2015;  <chymera@gentoo.org> afni-9999.ebuild:
  no recursive doexe

  10 Mar 2015;  <chymera@gentoo.org> afni-9999.ebuild:
  installing everyting as exe

  10 Mar 2015;  <chymera@gentoo.org> afni-9999.ebuild:
  adding run permissions

  10 Mar 2015;  <chymera@gentoo.org> afni-9999.ebuild:
  added path to environment variable, corrected spelling and whitespace

  05 Mar 2015;  <chymera@gentoo.org> afni-9999.ebuild:
  added dep

  04 Mar 2015;  <chymera@gentoo.org> afni-9999.ebuild:
  added dep and removed keyword for live ebuild
