@@ -54,19 +54,8 @@ src_compile() {
 src_install() {
 	emake INSTALLDIR="${D}/opt/${PN}" -j1 install install_plugins
 	emake LIBDIR="${D}/opt/${PN}" -j1 install_lib
-#	insinto /opt/${PN}
-#	doins -r "${S}/${BUILD}"/*
-
-#	exeinto /opt/${PN}
-#	PROG_LIST=$(grep -v '^$\|^\s*\#' "${S}"/prog_list.txt | while read LINE; do echo "${S}/${BUILD}/${LINE}"; done)
-
-#	echo ${PROG_LIST}
-#	nonfatal doexe "${PROG_LIST[@]}"
 
 	echo "LDPATH=/opt/afni" >> "${T}"/98${PN} || die "Cannot write environment variable."
 	echo "PATH=/opt/afni" >> "${T}"/98${PN} || die "Cannot write environment variable."
 	doenvd "${T}"/98${PN}
-
-#	dobin "${S}/${BUILD}/${PN}"
-#	pax-mark m "${D}/usr/bin/${PN}"
 }
